--- a/horario.html
+++ b/horario.html
@@ -8,12 +8,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
     <style>
         .timeline {
-            border-left: 3px solid #967caa;
+            border-left: 3px solid #cb9f92;
             border-bottom-right-radius: 4px;
             border-top-right-radius: 4px;
-            background: #fdf5d0;
+            background: #f9f1e9;
             margin: 0 auto;
             letter-spacing: 0.2px;
             position: relative;
@@ -45,7 +47,7 @@
         }
 
         .timeline .event {
-            border-bottom: 1px dashed #967caa;
+            border-bottom: 1px dashed #cb9f92;
             padding-bottom: 25px;
             margin-bottom: 25px;
             position: relative;
@@ -87,8 +89,8 @@
         }
 
         .timeline .event:after {
-            -webkit-box-shadow: 0 0 0 3px #967caa;
-            box-shadow: 0 0 0 3px #967caa;
+            -webkit-box-shadow: 0 0 0 3px #cb9f92;
+            box-shadow: 0 0 0 3px #cb9f92;
             left: -55.8px;
             background: #fff;
             border-radius: 50%;
@@ -111,7 +113,7 @@
             border-top-right-radius: 0;
             border-bottom-left-radius: 4px;
             border-top-left-radius: 4px;
-            border-right: 3px solid #727cf5;
+            border-right: 3px solid #cb9f92;
         }
 
         .rtl .timeline .event::before {
@@ -128,20 +130,19 @@
   </head>
 
   <body style="font-family: 'Open Sans', serif;">
-    <nav class="navbar navbar-expand-lg px-5 py-3 mb-5" style="background-color: #fdf5d0;">
+    <nav class="navbar navbar-expand-lg px-5 py-3 mb-5" style="background-color: #e3ebe5;">
         <div class="container-fluid">
             <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" width="150px" class="ml-5">
-          </a>
+                <span style="font-family: 'Bodoni Moda', serif;">MARIANA Y JORGE</span>
+            </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup" style="font-family: 'Bodoni Moda', serif; text-transform: uppercase;">
             <div class="navbar-nav">
                 <a class="nav-link" aria-current="page" href="index.html">Home</a>
                 <a class="nav-link" href="quehacer.html">¿Qué hacer en MTY?</a>
                 <a class="nav-link" href="horario.html">Horario</a>
-                <a class="nav-link" aria-disabled="true">Disabled</a>
               </div>
           </div>
         </div>
@@ -149,7 +150,7 @@
     
     <div class="container text-center">
         <h1 style="text-transform: uppercase; font-family: 'Open Sans', serif; font-weight: 700;" class="mb-4">HORARIO</h1>
-        <hr class="my-5" style="color: #f4c55f">
+        <hr class="my-5" style="color: #cb9f92">
 
         <div class="container mb-5">
             <div class="row">
