--- a/index.html
+++ b/index.html
@@ -8,30 +8,31 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bodoni+Moda:ital,opsz,wght@0,6..96,400..900;1,6..96,400..900&display=swap" rel="stylesheet">
   </head>
-  <body style="font-family: 'Open Sans', serif;">
-    <nav class="navbar navbar-expand-lg px-5 py-3 mb-5" style="background-color: #fdf5d0;">
+  <body style="font-family: 'Open Sans', serif; background-color: #fbf7ee;" >
+    <nav class="navbar navbar-expand-lg px-5 py-3 mb-3" style="background-color: #e3ebe5;">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">
-            <img src="img/logo.png" width="150px" class="ml-5">
+            <span style="font-family: 'Bodoni Moda', serif;">MARIANA Y JORGE</span>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup" style="font-family: 'Bodoni Moda', serif; text-transform: uppercase;">
             <div class="navbar-nav">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
               <a class="nav-link" href="quehacer.html">¿Qué hacer en MTY?</a>
               <a class="nav-link" href="horario.html">Horario</a>
-              <a class="nav-link" aria-disabled="true">Disabled</a>
             </div>
           </div>
         </div>
     </nav>
     
     <div class="container d-flex px-4 justify-content-center">
-        <div class="col-xs-12 col-md-5">
-          <img src="img/Screenshot 2024-10-10 at 6.07.43 p.m..png" class="img-fluid rounded" alt="...">  
+        <div class="col-xs-12 col-md-4">
+          <img src="img/IMG_1547.JPG" class="img-fluid rounded" alt="...">  
         </div>
         <div class="col-xs-12 col-md-5 align-self-center" style="margin-left: 2rem;">
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>  
